[API] create api that user can access and test them
