# src/v1/profile/routes.ts
@@ -1,8 +1,8 @@
 import { Router, Request, Response } from "express";
 import { Controller } from "./controllers";
-import { IProfileInsert, IProfileUpdate, IProfile } from "./profile.type";
+import { IProfileInsert, IProfileUpdate, IProfile, IProfileUpdateByUser } from "./profile.type";
 import { IResponse, ISuccessResponse } from "../utils/common.type";
-import { auth, checkRole } from "../middleware/authen";
+import { auth, checkRole, checkRoleUserAccess } from "../middleware/authen";
 import { Role, isSingleRole } from "../utils/role";
 
 const router = Router();
@@ -14,7 +14,7 @@ router.get("/profiles", auth, checkRole([Role.SuperAdmin, Role.Admin]), async (r
   else res.status(200).send(result);
 });
 
-router.get("/profile/:id", auth, checkRole([Role.SuperAdmin, Role.Admin, Role.User]), async (req: Request, res: Response) => {
+router.get("/profile/:id", auth, checkRole([Role.SuperAdmin, Role.Admin]), async (req: Request, res: Response) => {
   const id: string = (req.params.id).toString();
   let result: IResponse | IProfile = await profile.getProfile(id);
   
@@ -25,9 +25,28 @@ router.get("/profile/:id", auth, checkRole([Role.SuperAdmin, Role.Admin, Role.Us
   else res.status(200).send(result);
 });
 
-router.post("/profile", auth, checkRole([Role.SuperAdmin, Role.Admin, Role.User]), async (req: Request, res: Response) => {
+router.get("/user/profile/:user_id", auth, checkRole([Role.SuperAdmin, Role.Admin, Role.User]), checkRoleUserAccess, async (req: Request, res: Response) => {
+  const user_id: string = (req.params.user_id).toString();
+  let result: IResponse | IProfile = await profile.getProfileByUserId(user_id);
+  
+  if (result.hasOwnProperty('error')) {
+    if (result.hasOwnProperty('message')) res.status(404).send(result);
+    else res.status(500).send(result);
+  }
+  else res.status(200).send(result);
+});
+
+router.post("/profile", auth, checkRole([Role.SuperAdmin, Role.Admin]), async (req: Request, res: Response) => {
   const newProfile: IProfileInsert = req.body;
   let result: IResponse | ISuccessResponse = await profile.addProfile(newProfile);
+  if (result.hasOwnProperty('error')) res.status(500).send(result);
+  else res.status(201).send(result);
+});
+
+router.post("/user/profile/:user_id", auth, checkRole([Role.SuperAdmin, Role.Admin, Role.User]), checkRoleUserAccess, async (req: Request, res: Response) => {
+  req.body.user_id = (req.params.user_id).toString();
+  const newProfile: IProfileInsert = req.body;
+  let result: IResponse | ISuccessResponse = await profile.addProfileByUserId(newProfile);
   if (result.hasOwnProperty('error')) res.status(500).send(result);
   else res.status(201).send(result);
 });
@@ -36,6 +55,18 @@ router.put("/profile/:id", auth, checkRole([Role.SuperAdmin, Role.Admin, Role.Us
   req.body.id = (req.params.id).toString();
   const updateProfile: IProfileUpdate = req.body;
   let result: IResponse | ISuccessResponse = await profile.updateProfile(updateProfile);
+
+  if (result.hasOwnProperty('error')) {
+    if (result.hasOwnProperty('message')) res.status(404).send(result);
+    else res.status(500).send(result);
+  }
+  else res.status(200).send(result);
+});
+
+router.put("/user/profile/:user_id", auth, checkRole([Role.SuperAdmin, Role.Admin, Role.User]), checkRoleUserAccess, async (req: Request, res: Response) => {
+  req.body.user_id = (req.params.user_id).toString();
+  const updateProfile: IProfileUpdateByUser = req.body;
+  let result: IResponse | ISuccessResponse = await profile.updateProfileByUserId(updateProfile);
 
   if (result.hasOwnProperty('error')) {
     if (result.hasOwnProperty('message')) res.status(404).send(result);
